refactor: project refactored

--- a/templates/host_auth_system/wait.html
+++ b/templates/host_auth_system/wait.html
@@ -11,7 +11,7 @@
             <div class="card">
                 <div class="card-body">
                     <h1 class="card-title text-center">Please Wait</h1>
-                    <p class="card-text text-center">You cannot log in right now. An admin will check if you are a host or not.</p>
+                    <p class="card-text text-center">Currently, login access is restricted. Our administrators will verify your host status shortly.</p>
                     <div class="text-center mt-4">
                         <a href="{% url "homepage" %}" class="btn btn-primary">Go to Homepage</a>
                     </div>
