--- a/templates/quiz_attempter_management/view_discussion.html
+++ b/templates/quiz_attempter_management/view_discussion.html
@@ -42,7 +42,7 @@
                         </tbody>
                     </table>
                 {% else %}
-                    <h3>No discussions have been initiated yet</h3>
+                    <h3 class='text-center'>No discussions have been initiated yet</h3>
                 {% endif %}
                 
             </div>
