--- a/templates/host_auth_system/index.html
+++ b/templates/host_auth_system/index.html
@@ -8,7 +8,7 @@
 <header class="hero">
     <div class="container text-center py-5">
         <h1>Welcome to Quiz Hosting Website</h1>
-        <p class="lead text-danger">Host Quizzes with Ease</p>
+        <p class="lead text-danger">Effortless Quiz Managemen</p>
     </div>
 </header>
 
