--- a/templates/quiz_management/announcement.html
+++ b/templates/quiz_management/announcement.html
@@ -55,11 +55,11 @@
 
 
 <div class="container mt-4">
-    <div class="row mt-3">
+    <div class="row mt-3 d-flex justify-content-center">
         <div class="col-md-6">
             {% for message in messages %}
                 <div class="alert alert-success">
-                    {{ message }}
+                    <h3 class="text-center">{{ message }}</h3>
                 </div>
             {% endfor %}
         </div>
